# proyecto_bootcamp

./: LICENSE  README.md  execution.sh
sistema_monitoreo_Apollo_11/: pyproject.toml  setup.cfg
sistema_monitoreo_Apollo_11/sistema_monitoreo_Apollo_11/: main.py
sistema_monitoreo_Apollo_11/sistema_monitoreo_Apollo_11/utilities/: FileContentGeneration.py  FileHandler.py  FilenameGenerator.py  ReportGeneration.py
sistema_monitoreo_Apollo_11/sistema_monitoreo_apollo_11/: main.py
sistema_monitoreo_Apollo_11/sistema_monitoreo_apollo_11/utilities/: FileHandler.py  FilenameGenerator.py  ReportGeneration.py  texto.txt
sistema_monitoreo_Apollo_11/tests/: conftest.py
sistema_monitoreo_Apollo_11/tests/pruebas/: test_filename_generation.py  test_files.py  test_generacion_hash.py  test_report_generation.py
