[tool.poetry]
name = "sistema-monitoreo-Apollo-11"
version = "0.1.0"
description = ""
authors = ["Grupo 40"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
tabulate = "^0.9.0"
pydantic = "^2.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
